--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ channels-redis==3.3.0
 django-cors-headers==3.7.0
 django-heroku==0.3.1
 djangorestframework-recursive==0.1.2
+gunicorn==20.1.0
 pillow==8.3.1
 pip-chill==1.0.1
 pyjwt==1.7.1
